Добавлена возможность полного crud, по файловым моделям и связи одни-к-одному

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,7 +3,8 @@
     "filters": "Фильтры",
     "selectedRecords": "Выбранные записи",
     "navigation": "Навигация",
-    "dashboard": "Панель управления"
+    "dashboard": "Панель управления",
+    "File": "Файлы"
   },
   "messages": {
     "welcomeOnBoard_title": "Добро пожаловать!",
